# worldcoin-aggregation

./: .env.example  .gitignore  README.md  foundry.toml  remappings.txt
.github/workflows/: spellcheck.yml  test.yml  test_circuit.yml
aggregation_circuit/: Cargo.toml  Dockerfile  README.md  build_docker.sh  rust-toolchain
aggregation_circuit/abi/: WorldcoinAggregationV1Abi.json
aggregation_circuit/configs/intents/: 2.yml
aggregation_circuit/data/: generated_proofs_1024.json  generated_proofs_16.json  generated_proofs_32.json
aggregation_circuit/src/: constants.rs  lib.rs  prover.rs  scheduler.rs  types.rs  utils.rs
aggregation_circuit/src/circuit_factory/: evm.rs  intermediate.rs  leaf.rs  mod.rs  root.rs
aggregation_circuit/src/circuit_factory/v1/: intermediate.rs  leaf.rs  root.rs
aggregation_circuit/src/circuit_factory/v2/: leaf.rs
aggregation_circuit/src/circuits/v1/: intermediate.rs  leaf.rs  root.rs
aggregation_circuit/src/circuits/v2/: intermediate.rs  leaf.rs  root.rs
aggregation_circuit/src/keygen/: mod.rs  node_params.rs
aggregation_circuit/src/prover/: prover.rs  types.rs
aggregation_circuit/src/scheduler/: async_scheduler.rs  local_scheduler.rs  mod.rs  recursive_request.rs  task.rs  task_tracker.rs  types.rs
aggregation_circuit/src/scheduler/executor/: dispatcher.rs  mod.rs
aggregation_circuit/src/toolings/: instance_config.py
app/axiom/: worldcoin.circuit.ts  worldcoinV2.circuit.ts
axiom_circuit/: Cargo.toml  README.md  build_docker.sh
axiom_circuit/configs/: config_16.json  config_64_v1.json
axiom_circuit/data/: generated_proofs_64.json  real_proofs_16.json  real_proofs_8.json  vk.json
axiom_circuit/src/: test.rs  utils.rs
circuit/: Cargo.toml  Dockerfile  README.md  build_docker.sh
circuit/configs/: config_1.json  config_32.json  config_64_v1.json  config_64_v2.json  config_8.json  world_id_balance_config_16.json
circuit/configs/intents/: 128.yml  16.yml  256.yml  64.yml
circuit/data/: generated_proofs_128.json  generated_proofs_16.json  generated_proofs_2.json  generated_proofs_256.json  generated_proofs_32.json  generated_proofs_64.json  generated_proofs_8.json  num_proofs_mismatch.json  server_request.json  world_id_balance.json  worldcoin_input.json
circuit/src/: constants.rs  lib.rs  mock_test.rs  server_types.rs  types.rs  world_id_balance_circuit.rs  world_id_balance_types.rs
circuit/src/circuit_factory/: evm.rs  leaf.rs  root.rs
circuit/src/circuits/v1/: root.rs
circuit/src/circuits/v2/: intermediate.rs  root.rs
circuit/src/keygen/: mod.rs  node_params.rs
circuit/src/prover/: mod.rs
circuit/src/scheduler/: local_scheduler.rs  mod.rs
circuit/src/scheduler/executor/: dispatcher.rs  mod.rs
circuit/src/toolings/: instance_config.py
circuit/toolings/: abi.ts  crawlProofData.ts  merkleSisterNodes.ts  package.json
client-circuit/: Cargo.toml  README.md
client-circuit/configs/: config_1024_v2.json  config_128_v1.json  config_128_v2.json  config_16.json  config_512_v2.json  config_8192_v2.json
client-circuit/data/: config.json  dummy.json  num_proofs_mismatch.json  too_many_proofs.json  vk.json  world_id_balance.json  worldcoin_input.json  wrong_proof.json  zero_proof.json
client-circuit/src/: circuit.rs  circuit_v1.rs  circuit_v2.rs  constants.rs  lib.rs  main.rs  mock_test.rs  test.rs  types.rs  world_id_balance_circuit.rs  world_id_balance_types.rs
client-circuit/src/tests/: circuit.rs
script/: AggregationDeployBase.s.sol  Claim.s.sol  Claim.sol  DeployAggregationV1.s.sol  DeployAggregationV2.s.sol  DeployMockV1.s.sol  DeployMockV2.s.sol  DeployMocks.s.sol  DeployV1Mock.s.sol  DeployV2Mock.s.sol  claim.sh  deploy_agg_v1.sh  deploy_agg_v2.sh  deploy_mocks.sh  deploy_v1_mock.sh  deploy_v2_mock.sh
script/config/: claim.json  deployed.json  querySchema.json  v2client.json
src/: WorldcoinAggregation.sol  WorldcoinAggregationV1.sol  WorldcoinAggregationV2.sol
src/interfaces/: IERC20.sol  IRootValidator.sol
src/mocks/: GrantMock.sol  RootValidatorMock.sol  WLDMock.sol
src/verifiers/: Claim128Verifier.sol  Claim2Verifier.sol  Claim4Verifier.sol
src/verifiers/v1/: V1Claim128Verifier.sol  V1Claim16Verifier.sol  V1Claim256Verifier.sol  V1Claim2Verifier.sol  V1Claim32Verifier.sol  V1Claim64Verifier.sol
src/verifiers/v2/: V2Claim128Verifier.sol  V2Claim16Verifier.sol  V2Claim2Verifier.sol  V2Claim32Verifier.sol  V2Claim64Verifier.sol  V2Claim8192Verifier.sol
standalone_circuit/: README.md  build_docker.sh
standalone_circuit/abi/: WorldcoinAggregationV1Abi.json  WorldcoinAggregationV2Abi.json
standalone_circuit/configs/intents/: 2.yml  32.yml  8192.yml
standalone_circuit/data/: generated_proofs_1.json  generated_proofs_128.json  generated_proofs_16.json  generated_proofs_2.json  generated_proofs_256.json  generated_proofs_32.json  generated_proofs_64.json  generated_proofs_8.json
standalone_circuit/src/: constants.rs  types.rs  utils.rs
standalone_circuit/src/circuit_factory/: intermediate.rs  leaf_agg.rs  mod.rs
standalone_circuit/src/circuits/v1/: intermediate.rs  leaf.rs  root.rs
standalone_circuit/src/circuits/v2/: intermediate.rs  leaf.rs  mod.rs  root.rs
standalone_circuit/src/keygen/: mod.rs  node_params.rs
standalone_circuit/src/prover/: types.rs
standalone_circuit/src/scheduler/: async_scheduler.rs  contract_client.rs  local_scheduler.rs  mod.rs  recursive_request.rs  run_keygen.sh  task_tracker.rs  types.rs
standalone_circuit/src/scheduler/executor/: dispatcher.rs
test/: WorldcoinAggregation.t.sol  WorldcoinAggregationV1.t.sol  WorldcoinAggregationV2.t.sol
test/helpers/: Utils.sol  WLDGrant.sol  WorldcoinAggregationHelper.sol  WorldcoinAggregationV1Helper.sol  WorldcoinAggregationV2Helper.sol
toolings/: README.md
toolings/merkleSisterNodes/src/: merkleSisterNodes.ts
toolings/proofCrawler/src/: abi.ts  crawlProofData.ts
utils/: README.md  package.json
utils/src/: abi.ts  merkleSisterNodes.ts
