[package]
name = "worldcoin-aggregation"
version = "0.0.1"        
edition = "2021"

[dependencies]
itertools = "0.11"
lazy_static = "1.4.0"
tokio = "1.38.0"

# serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
serde_as = "0.0.1"

# misc
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
futures = { version = "=0.3" }
async-recursion = "1.0.5"
hex = "0.4.3"
num-bigint = "0.4.5"
dirs = "5.0.1"
uuid = { version = "1.2", features = ["v4"] }
phf = { version = "0.11.2", features = ["macros"] }

# server endpoint
rocket = { version = "0.5.0", features = ["json"] }
clap = { version = "=4.4.7", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
parking_lot = "0.12.3"

# axiom
axiom-components = { git = "ssh://git@github.com/axiom-crypto/axiom-eth.git", branch = "develop" }
axiom-eth = { git = "ssh://git@github.com/axiom-crypto/axiom-eth.git", branch = "develop", package = "axiom-eth", features = [
    "halo2-axiom",
    "jemallocator",
    "providers",
    "display",
    "aggregation",
] }

# ethers
ethers= { version = "=2.0.14", features = ["optimism"] }

# keygen
blake3 = { version = "=1.5", optional = true }
serde_yaml = { version = "=0.9.16", optional = true }
serde_with = "3.9.0"
async-trait = "0.1.81"

[dev-dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }
test-log = "0.2.11"
test-case = "3.1.0"

[features]
asm = ["axiom-eth/asm"]
revm = ["axiom-eth/revm"]
keygen = ["axiom-eth/keygen", "dep:serde_yaml"]

[profile.dev]
opt-level = 3
debug = 2              # change to 0 or 2 for more or less debug info
overflow-checks = true
incremental = true

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = true
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
# codegen-units = 16

[profile.release]
opt-level = 3
debug = 1
debug-assertions = false
lto = "fat"
# `codegen-units = 1` can lead to WORSE performance - always bench to find best profile for your machine!
codegen-units = 1
panic = "unwind"
incremental = false

[profile.unit-testing]
inherits = "dev"
opt-level = 0
debug = 2              # change to 0 or 2 for more or less debug info
overflow-checks = true
incremental = true
