[package]
name = "client-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
axiom-circuit = { git = "https://github.com/axiom-crypto/axiom-sdk-rs.git", branch = "feat/groth16" }
axiom-sdk = { git = "https://github.com/axiom-crypto/axiom-sdk-rs.git", branch = "feat/groth16" }
axiom-components = { git = "ssh://git@github.com/axiom-crypto/axiom-eth-working.git", branch = "feat/groth16" }
axiom-codec = { git = "ssh://git@github.com/axiom-crypto/axiom-eth-working.git", branch = "feat/groth16", package = "axiom-codec", default-features = false }
axiom-eth = { git = "ssh://git@github.com/axiom-crypto/axiom-eth-working.git", branch = "feat/groth16", package = "axiom-eth" }
ethers = "2.0.14"
hex = "0.4.3"
num-bigint = "0.4.5"
serde = "1.0.200"
serde_json = "1.0.116"
halo2curves = "0.6.1"
axiom-query = "2.0.17"

[[test]]
name = "integration_tests"
path = "src/tests/circuit.rs"
