[package]
name = "client-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
axiom-circuit = { git = "https://github.com/axiom-crypto/axiom-sdk-rs.git", branch = "develop" }
axiom-sdk = { git = "https://github.com/axiom-crypto/axiom-sdk-rs.git", branch = "develop" }
axiom-components = { git = "ssh://git@github.com/axiom-crypto/axiom-eth-working.git", branch = "develop" }
axiom-codec = { git = "ssh://git@github.com/axiom-crypto/axiom-eth-working.git", branch = "develop", package = "axiom-codec", default-features = false }
axiom-eth = { git = "ssh://git@github.com/axiom-crypto/axiom-eth-working.git", branch = "develop", package = "axiom-eth" }
ethers = "2.0.14"
hex = "0.4.3"
num-bigint = "0.4.5"
serde = "1.0.200"
serde_json = "1.0.116"
halo2curves = "0.6.1"
axiom-query = "2.0.17"
env_logger = "0.11.3"


[features]
default = ["max_proofs_16"]
max_proofs_16 = []
max_proofs_128 = []
max_proofs_512 = []
max_proofs_1024 = []
max_proofs_8192 = []

